Fix alignment of share buttons and cards in dashboard

--- a/front-end/src/sass/dashboard.scss
+++ b/front-end/src/sass/dashboard.scss
@@ -13,15 +13,12 @@
     }
 }
 
-.card-container {
-  display: flex;
-  flex-direction: column;
-}
-
 .share-icon {
   margin: 0.25rem 0.5rem;
 }
 
-.share-icons {
+.tournament {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
